# advent-2021

./: Cargo.toml
day12/: Graph.cs  Main.cs  Tree.cs
src/: main.rs  util.rs
src/problems/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
