[package]
name = "advent-2021"
version = "0.1.0"
authors = ["Eric McHugh <emmgame221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2.1"
itertools = "0.10"
[dependencies.clap]
version = "~2.33.3"
default-features = false